# hfilesize

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  readme.md  setup.py
hfilesize/: __init__.py  hfilesize.py
hfilesize/test/: test_hfilesize.py
