[project]
name = "hfilesize"
version = "0.1.0"
description = "Human readable file sizes"
authors = [
    {name = "simonzack", email = "simonzack@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "readme.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/simonzack/hfilesize"

[build-system]
requires = [
    "pdm-pep517>=1.0.0",
]
build-backend = "pdm.pep517.api"

[tool.pdm]
